[gd_scene load_steps=6 format=3 uid="uid://beqhdapidytec"]

[ext_resource type="Script" path="res://scenes/ui/login_form.gd" id="1_1rro0"]
[ext_resource type="Texture2D" uid="uid://c7gelqclh2pum" path="res://assets/ui/icons/person_icon.png" id="1_8vp46"]
[ext_resource type="Texture2D" uid="uid://l8w6wbo1twfv" path="res://assets/ui/icons/password_icon.png" id="3_bqngf"]
[ext_resource type="FontFile" uid="uid://c4g6igiex5rko" path="res://assets/ui/font/monogram-extended.ttf" id="5_0rge2"]
[ext_resource type="Script" path="res://classes/SoundButton.gd" id="5_s2ewj"]

[node name="LoginForm" type="VBoxContainer"]
theme_override_constants/separation = 3
script = ExtResource("1_1rro0")

[node name="UsernameContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="UsernameContainer"]
layout_mode = 2
texture = ExtResource("1_8vp46")

[node name="UsernameLineEdit" type="LineEdit" parent="UsernameContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Username"

[node name="PasswordContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="PasswordContainer"]
layout_mode = 2
texture = ExtResource("3_bqngf")

[node name="PasswordLineEdit" type="LineEdit" parent="PasswordContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Password"
secret = true

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(0, 21)
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 0

[node name="ErrorScrollContainer" type="ScrollContainer" parent="MarginContainer"]
layout_mode = 2
vertical_scroll_mode = 0

[node name="ErrorMessage" type="Label" parent="MarginContainer/ErrorScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.909804, 0.231373, 0.231373, 1)
theme_override_constants/shadow_offset_y = 0
theme_override_fonts/font = ExtResource("5_0rge2")

[node name="ProcessingLabel" type="Label" parent="MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("5_0rge2")
text = "Processing..."
horizontal_alignment = 1

[node name="LoginButton" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
mouse_default_cursor_shape = 2
text = "Log in"
script = ExtResource("5_s2ewj")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
visible = false
layout_mode = 2
alignment = 1

[node name="PasswordResetLink" type="LinkButton" parent="."]
layout_mode = 2
size_flags_horizontal = 8
theme_override_colors/font_color = Color(0.588235, 0.423529, 0.423529, 1)
theme_override_fonts/font = ExtResource("5_0rge2")
text = "Forgot password ?"

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 2
